# stm32lib

./: .gitignore  TODO.md  create-project.sh
examples/: .gitignore
examples/dac/signalGenerator/: main.c  platform_config.h
examples/device/cc3000/: main.c  platform_config.h
examples/device/mcp3204/: main.c  platform_config.h
examples/device/nRF8001/: bluetooth-services.h  main.c  platform_config.h
examples/device/sdcard/: main.c  platform_config.h
examples/gpio/blink/: .main.c.swp  main.c  platform_config.h
examples/gpio/interrupt/: interrupts.c  main.c  platform_config.h
examples/spi/mcp3204/: main.c  platform_config.h
examples/usart/interrupt/: main.c  platform_config.h
examples/usart/polling/: .gitignore  CMakeLists.txt  build.sh  interrupts.c  main.c  platform_config.h  run-cmake.sh  system_stm32f0xx.c
lib/stm32lib/: adc.c  adc.h  dac.c  dac.h  debug.c  debug.h  exti.c  exti.h  iwdg.c  iwdg.h  newlib.c  rcc.c  rcc.h  ringbuffer.c  ringbuffer.h  spi.c  spi.h  time.c  time.h  usart.c  usart.h  utils.c  utils.h
lib/stm32lib/contiki/: httpd.c  httpd.h
lib/stm32lib/device/: README.md
lib/stm32lib/device/cc3000/: cc3000.c  cc3000.h
lib/stm32lib/device/cc3000/host-driver/: cc3000_common.h
lib/stm32lib/device/enc28j60/: enc28j60.c  enc28j60.h
lib/stm32lib/device/mcp3204/: mcp3204.c  mcp3204.h
lib/stm32lib/device/nRF8001/: aci.h  aci_cmds.h  aci_evts.h  aci_queue.c  aci_queue.h  aci_setup.c  bluetooth-services-usart.h  bluetooth-services-usart_lock.h  hal_aci_tl.c  hal_aci_tl.h  lib_aci.c  lib_aci.h  nrf8001_usart.c  nrf8001_usart.h  usart-profile.xml
lib/stm32lib/device/sdcard/: fat-structs.h  fat.c  fat.h  sdcard.c  sdcard.h
lib/stm32lib/device/sst26vf0xx/: sst26vf0xx.c  sst26vf0xx.h
lib/stm32lib/hal/: adc.c  adc.h  base.h  dac.c  dac.h  exti.c  exti.h  gpio.c  gpio.h  iwdg.c  iwdg.h  nvic.c  nvic.h  rcc.c  rcc.h  spi.c  spi.h  usart.c  usart.h
lib/stm32lib/hal/chip/: chip.h  core_cm0.h  stm32f072xb.h  stm32f0xx_hal_conf_template.h
project-template/: CMakeLists.txt  build.sh  gcc_stm32.cmake  run-gdb.sh  run-st-util-server.sh  run-tty.sh
project-template/linker/: stm32f10x-512k_flash-64k_ram.ld
project-template/platform_config/: platform_config.h
project-template/startup/: startup_stm32f072xb.s
